--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,37 +1,31 @@
-# file: audit-improved.yml
-name: Security audit
-
-# Restrict permissions to the minimum required
+name: Security Audit & Auto-Patch
 permissions:
-  contents: read
+  contents: write # Required to commit changes
   security-events: write
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Daily at midnight
+    - cron: "0 0 * * *" # Daily scan
   push:
     branches: [main]
     paths:
       - "**/Cargo.toml"
       - "**/Cargo.lock"
-  pull_request:
-    paths:
-      - "**/Cargo.toml"
-      - "**/Cargo.lock"
   workflow_dispatch:
 
-# Cancel redundant runs
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  audit:
-    name: RustSec Audit
+  audit-and-patch:
+    name: Security Audit & Auto-Patch
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -50,40 +44,45 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo-
 
-      - name: Install cargo-audit
-        run: cargo install cargo-audit --locked
-
-      - name: Run cargo audit
-        id: cargo-audit
+      - name: Install cargo-audit and cargo-edit
         run: |
-          # Create output directory for reports
-          mkdir -p audit-reports
+          cargo install cargo-audit --locked
+          cargo install cargo-edit --locked
 
-          # Run cargo audit and capture output
-          echo "Running cargo audit..."
-          cargo audit --json > audit-reports/audit.json || {
-            echo "::warning::Vulnerabilities found in dependencies. See audit report for details."
+      - name: Run initial cargo audit
+        id: initial-audit
+        run: |
+          echo "Running initial security audit..."
+          cargo audit --json > audit-report.json || {
+            echo "Vulnerabilities detected. Proceeding to patch dependencies."
             echo "has_vulnerabilities=true" >> $GITHUB_OUTPUT
           }
 
-          # Create a human-readable report
-          echo "Creating human-readable report..."
-          cargo audit > audit-reports/audit.txt
-
-          # Output summary to the workflow log
-          echo "\n==== Audit Summary ===="
-          cat audit-reports/audit.txt
-          echo "======================"
-
-      - name: Upload audit results
-        uses: actions/upload-artifact@v3
-        with:
-          name: audit-reports
-          path: audit-reports/
-          retention-days: 7
-
-      - name: Check for vulnerabilities
-        if: steps.cargo-audit.outputs.has_vulnerabilities == 'true'
+      - name: Patch dependencies
+        if: steps.initial-audit.outputs.has_vulnerabilities == 'true'
         run: |
-          echo "::error::Security vulnerabilities found in dependencies. Review the audit report."
-          exit 1
+          echo "Parsing audit report for vulnerable packages..."
+          # Extract vulnerable crates and update them
+          jq -r '.vulnerabilities.packages[] | "cargo add \(.name)@$(echo \(.patched_versions) | jq -r .[0])"' audit-report.json | sh
+
+          echo "Updating Cargo.lock..."
+          cargo update
+
+          echo "Re-running audit to verify fixes..."
+          cargo audit --json > audit-report-fixed.json || {
+            echo "::error::Failed to resolve all vulnerabilities. Manual intervention required."
+            exit 1
+          }
+
+          echo "All vulnerabilities resolved successfully."
+
+      - name: Commit and push changes
+        if: steps.initial-audit.outputs.has_vulnerabilities == 'true'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Action Bot"
+          git add Cargo.toml Cargo.lock audit-report*.json
+          git commit -m "Auto-patched security vulnerabilities" || echo "No changes to commit"
+          git push origin ${{ github.head_ref || github.ref }}
